# flash-attn-101

./: .gitignore  CMakeLists.txt  README.md  bench  makefile
csrc/: CMakeLists.txt  bench.cu  cuda_utils.cu  flash_attn_1.cu  flash_attn_2.cu  naive_attention.cu  profile.cu  profile_utils.cu
csrc/flash_attn/: flash_api.cu
csrc/flash_attn/src/: block_info.h  flash.h  flash_fwd_hdim32_fp16_causal_sm80.cu  flash_fwd_hdim64_fp16_causal_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  mask.h  softmax.h  static_switch.h  utils.h
include/: cuda_attn.hpp  cuda_utils.hpp  flash_attn_1.cuh  flash_attn_2.cuh  helper.cuh  profile_utils.cuh  self_attention.cuh
src/: bench.cu  flash_attn_1.cu  flash_attn_2.cu  helper.cu  self_attention.cu
